@@ -1,7 +1,11 @@
 2009-03-07 Denton Woods <doomwiz@users.sf.net>
 	* Updated version numbers to 1.7.8 project-wide.
 	* DevIL_manual.texi: Added several file formats to the appendix.
-	* il_io.c: Updated Doxygen comments to loading/saving functions.
+	* il_io.c: Updated Doxygen comments for loading/saving functions.
+	* libraries.txt: Updated with new libraries.
+	* il_io.c (ilTypeFromExt): Changed return value of FITS files to IL_FITS.
+		Added DICOM, FTX, Rot and Texture checks.
+	* il_states.c/.h: Updated with newer file formats.
 
 2009-03-06 Denton Woods <doomwiz@users.sf.net>
 	* Updated VC8 projects to use il_mp3.c.
